--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,11 +1,16 @@
 _repo: The-Gospel-of-John-for-Readers_5656
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   editor:
     agent_name: Lightheart
     gutenberg_agent_id: '1831'
     url: http://www.gutenberg.org/2009/agents/1831
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/5656#The-Gospel-of-John-for-Readers
 gutenberg_issued: '2004-05-01'
 gutenberg_type: Text
 identifiers:
